resolve aside collapse issue causing flawed offset upon small->large screen adjustments via increased specifity on 'disappear' classes

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,18 +143,18 @@ details > summary > span {
 .color-accent2-on-active:active {
   color: var(--bg-dark2) !important;
 }
-
+ /* transition: 0.6s all; */
 .disappear-up {
-  position: fixed; top: -600px; transition: 0.6s all;
+  max-height: 360px; position: fixed; top: -400px;
 }
 .disappear-down {
-  position: fixed; bottom: -600px; transition: 0.6s all;
+  max-height: 360px; position: fixed; bottom: -400px;
 }
 .disappear-right {
-  position: fixed; right: -600px; transition: 0.6s all;
+  max-width: 360px; position: fixed; right: -400px;
 }
 .disappear-left {
-  position: fixed; left: -600px; transition: 0.6s all;
+  max-width: 360px; position: fixed; left: -400px;
 }
 .widget {
   border: 1px solid #6B7063;
